--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "oracledb": "^6.3.0",
+    "lodash": "^4.17.21",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "postcss": "^8.4.35",
     "sequelize": "^6.37.1",
     "tailwindcss": "^3.4.1",
@@ -34,6 +36,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
     "@types/oracledb": "^6.2.1",
     "@types/uuid": "^9.0.8",
